...

            <item
                android:id="@+id/meetingList"
                android:icon="@drawable/baseline_meeting_room_24"
                android:title="Manage Meetings" />
            <item
                android:id="@+id/employeeList"
                android:icon="@drawable/baseline_people_alt_24"
                android:title="Employees" />


            <item
                android:id="@+id/editContent"
...
