...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/search_org"
                android:layout_toStartOf="@id/add_emp"
                android:layout_width="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/baseline_search_24" />

            <ImageView
...
