...
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.button.MaterialButton

                android:id="@+id/add_emp_btn"
                android:layout_width="@dimen/_270sdp"
                app:cornerRadius="@dimen/_11sdp"
                android:layout_height="@dimen/_42sdp"
                android:text="Add Employee"
                android:layout_marginTop="@dimen/_20sdp"/>

...
