...
            app:cardElevation="0dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/yes_btn"
                android:layout_width="wrap_content"
                app:cornerRadius="@dimen/_11sdp"
                android:backgroundTint="#F44336"
                android:layout_height="wrap_content"
                android:text="Yes"
                />
...
